# emiessiene

./: .gitignore  Cargo.toml  Trunk.toml  index.html  msn.html  styles backup.css  styles.css
src/: app.rs  components.rs  main.rs
src-tauri/: Cargo.toml  friends.json  tauri.conf.json  user.json
src-tauri/src/: main.rs
src/components/: chat_component.rs  friend_component.rs  loginpage_component.rs  mainpage_component.rs  message_component.rs  models.rs
